--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "chalk": "^5.3.0",
     "chokidar": "^4.0.1",
     "cli-spinner": "^0.2.10",
+    "cytoscape": "^3.30.4",
     "d3": "^7.9.0",
     "esbuild-sass-plugin": "^3.3.1",
     "flexsearch": "0.7.43",
@@ -59,7 +60,7 @@
     "mdast-util-find-and-replace": "^3.0.1",
     "mdast-util-to-hast": "^13.2.0",
     "mdast-util-to-string": "^4.0.0",
-    "mermaid": "^11.4.0",
+    "mermaid": "^9.4.0",
     "micromorph": "^0.4.5",
     "pixi.js": "^8.5.2",
     "preact": "^10.24.3",
@@ -87,7 +88,7 @@
     "satori": "^0.10.14",
     "serve-handler": "^6.1.6",
     "sharp": "^0.33.5",
-    "shiki": "^1.22.2",
+    "shiki": "^1.23.1",
     "source-map-support": "^0.5.21",
     "to-vfile": "^8.0.0",
     "toml": "^3.0.0",
